<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_cityName"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/city_hint"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_CountryName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_country"
        android:textStyle="bold"
        android:textSize="18sp" />

    <Button
        android:text="@string/search_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_search"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/Saved_Cities_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_SavedCitiesText"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView_savedCities" >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:text="@string/No_saved_cities_text"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_noSavedCities"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

    </FrameLayout>

</LinearLayout>